--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -7,7 +7,8 @@
 }
 
 .header a {
-  border: 1px solid black;
+  background-color: rgba(255, 0, 0, 0.1);
+  color: red;
   border-radius: 5px;
   cursor: pointer;
   padding: 4px;
@@ -16,12 +17,11 @@
 }
 
 .header a:hover {
+  background-color: rgba(255, 0, 0, 0.2);
   font-weight: bold;
-  border: 2px solid black;
 }
 
 .moduleExample {
-  border: 1px solid black;
-  background: yellow;
+  background-color: rgba(255, 0, 0, 0.1);
   padding: 20px !important;
 }
