--- a/Module2/14_Assignment/public/css/login.css
+++ b/Module2/14_Assignment/public/css/login.css
@@ -1,5 +1,5 @@
-.register{
-    display:flex;
+.login {
+    display: flex;
     min-height: 100vh;
     justify-content: center;
     align-items: center;
