--- a/Module2/14_Assignment/public/css/form.css
+++ b/Module2/14_Assignment/public/css/form.css
@@ -10,6 +10,7 @@
     box-shadow: 0px 0px 0px 0.5px rgb(50 50 93 / 10%),
         0px 2px 5px 0px rgb(50 50 93 / 10%),
         0px 1px 1.5px 0px rgb(0 0 0 / 7%);
+    margin:0 auto;
 }
 
 .form > input {
